--- a/content/Midterm.html
+++ b/content/Midterm.html
@@ -162,7 +162,8 @@ img.add_border {
 <p></p>
 <p>期中自評影片:</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/PfDAywoB-Vc" title="國立虎尾科技大學   機械設計工程系   cd2025 期中自評   41071203" width="560"></iframe></p>
-<p style="padding-left: 30px;"></p><br />HW3 << <a href='HW3.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
+<p style="padding-left: 30px;"></p>
+<br />HW3 << <a href='HW3.html'>Previous</a> <a href='Exam.html'>Next</a> >> Exam</div>
         
     <!-- footer -->
       <div class="container">
