--- a/content/Tasks.html
+++ b/content/Tasks.html
@@ -151,7 +151,8 @@ img.add_border {
 <p>      task4 (使用 Onshape 建立平面四連桿系統零組件)</p>
 <p><strong>task5 與 task6 則為 HW3 的主要內容</strong></p>
 <p>      task5 (Webots Tutorial 1 ~3)</p>
-<p>      task6 (Webots Tutorial 4 ~6)</p><br />About << <a href='About.html'>Previous</a> <a href='Wink.html'>Next</a> >> Wink</div>
+<p>      task6 (Webots Tutorial 4 ~6)</p>
+<br />About << <a href='About.html'>Previous</a> <a href='Wink.html'>Next</a> >> Wink</div>
         
     <!-- footer -->
       <div class="container">
