--- a/content/Wink.html
+++ b/content/Wink.html
@@ -145,7 +145,8 @@ img.add_border {
     <div id="tipue_search_content">Tasks << <a href='Tasks.html'>Previous</a> <a href='task1.html'>Next</a> >> task1<br /><h1>Wink</h1>
 <!-- 假如檔案小於 5mb, 將 mp4 檔案放入 downloads 目錄後取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="123" height="630" muted="true" width="1008">
-<source src="./../downloads/123.mp4" type="video/mp4"/></video></div><br />Tasks << <a href='Tasks.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
+<source src="./../downloads/123.mp4" type="video/mp4"/></video></div>
+<br />Tasks << <a href='Tasks.html'>Previous</a> <a href='task1.html'>Next</a> >> task1</div>
         
     <!-- footer -->
       <div class="container">
