--- a/content/task3.html
+++ b/content/task3.html
@@ -158,7 +158,8 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/3VFwUIMZTCE?si=Ux9MaA7x_CLr4qz7" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p></p>
-<p><b></b></p><br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
+<p><b></b></p>
+<br />w3 << <a href='w3.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
       <div class="container">
