--- a/content/Exam3.html
+++ b/content/Exam3.html
@@ -145,7 +145,12 @@ img.add_border {
     <div id="tipue_search_content">Exam2 << <a href='Exam2.html'>Previous</a> <a href='Final.html'>Next</a> >> Final<br /><h1>Exam3</h1>
 <p>Exam3 (20%): Webots 機電模擬場景的協同設計</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam3 - 學員學號</p>
-<br />Exam2 << <a href='Exam2.html'>Previous</a> <a href='Final.html'>Next</a> >> Final</div>
+<p></p>
+<p><strong>Exam3-1</strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/DkAv1fRHwxs?si=G1q3qu-xlD_uNdxV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
+<p><strong></strong></p>
+<p><strong>Exam3-2</strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/nufCifoTWTU?si=M4hwbr8kT2ZLWqWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p><br />Exam2 << <a href='Exam2.html'>Previous</a> <a href='Final.html'>Next</a> >> Final</div>
         
     <!-- footer -->
       <div class="container">
