--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -562,7 +562,12 @@ for i in range(1, 67):  # 1 到 66
 <h2>Exam3</h2>
 <p>Exam3 (20%): Webots 機電模擬場景的協同設計</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam3 - 學員學號</p>
-<h1>Final</h1>
+<p></p>
+<p><strong>Exam3-1</strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/DkAv1fRHwxs?si=G1q3qu-xlD_uNdxV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
+<p><strong></strong></p>
+<p><strong>Exam3-2</strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/nufCifoTWTU?si=M4hwbr8kT2ZLWqWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p><h1>Final</h1>
 <p><span>期末協同專案執行過程影片、簡報與 PDf 報告檔案 (六人一組) (30%)</span></p>
 <p><span>題目: <span style="background-color: #ccffcc;">Webots 動態投籃模擬系統的協同設計</span></span></p>
 <p><span>說明: </span></p>
