--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -436,7 +436,7 @@ for i in range(1, 67):  # 1 到 66
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW2 - 學員學號</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/0sYOsMbdgO0" title="國立虎尾科技大學   機械設計工程系   cd2025 HW2   41071203" width="560"></iframe></p>
-<h2>HW3</h2>
+<p><a href="/downloads/HW2.zip" title="HW2連桿">HW2連桿.zip</a></p><h2>HW3</h2>
 <p>HW3 (20%):<span style="background-color: #ffff00;">建立 Webots 桌上籃球遊戲機模擬系統</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 41071203</p>
 <p></p>
@@ -478,11 +478,11 @@ for i in range(1, 67):  # 1 到 66
 <h2>Exam1</h2>
 <p>Exam1 (10%): 建立 Webots 基本物件模擬場景</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam1 - 學員學號</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/qYk3ka0irrs" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam1 - 41071203" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/m8At8rnjQjI?si=4bhWl2FSqwoXLDDi" title="YouTube video player" width="560"></iframe></p>
 <p></p>
-<p><strong>檔案: </strong><a href="/downloads/EX1.zip">EX1檔案</a></p>
+<p><strong><span style="color: #0000ff;">檔案:</span> </strong><a href="/downloads/EX1.zip">EX1檔案</a></p>
 <p></p>
-<p><strong>詳細步驟:</strong></p>
+<p><span style="color: #0000ff;"><strong>詳細步驟:</strong></span></p>
 <p>一、建立 Robot 與基座 (Base)</p>
 <ol data-end="313" data-start="153">
 <li class="" data-end="196" data-start="153">
@@ -563,10 +563,12 @@ for i in range(1, 67):  # 1 到 66
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/9vmKljh-6fc?si=cWV05HKhQ3aGF-Qf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <p></p>
-<p><strong>操作影片</strong></p>
+<p><span style="color: #0000ff;"><strong>操作影片</strong></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/_b5IuWsax4w?si=UuM7XdJUg0BaSKz_" title="YouTube video player" width="560"></iframe></p>
-<p><strong></strong></p>
-<p><strong>步驟:</strong></p>
+<p></p>
+<p><span style="color: #0000ff;"><strong>檔案連結: <a href="/downloads/Exam2.zip">Exam2.zip</a></strong></span></p>
+<p></p>
+<p><span style="color: #0000ff;"><strong>步驟:</strong></span></p>
 <p class="" data-end="152" data-start="51">在 <strong data-end="67" data-start="53">Solvespace</strong> 中完成零件與機構設計後，將模型匯出為 STL 格式。接著，使用程式碼工具將 STL 檔轉換為 OBJ 格式，再匯入 <strong data-end="137" data-start="126">Blender</strong>，以檢查所有零件名稱是否正確。</p>
 <p class="" data-end="360" data-start="154">確認模型無誤後，開始在 <strong data-end="176" data-start="166">Webots</strong> 中建立機器人結構。首先，新增一個 <code data-end="201" data-start="194">Robot</code> 節點，並設定所需的 <code data-end="224" data-start="212">controller</code>（名稱為 <code data-end="249" data-start="229">fourbar_controller</code>）。接下來，在 <code data-end="267" data-start="257">children</code> 中加入兩個旋轉關節（<code data-end="290" data-start="278">HingeJoint</code>），分別命名為 <code data-end="306" data-start="298">joint1</code> 與 <code data-end="317" data-start="309">joint4</code>，以及兩個底座物件 <code data-end="334" data-start="327">Solid</code>（分別命名為 <code data-end="348" data-start="341">base1</code> 與 <code data-end="358" data-start="351">base2</code>）。</p>
 <hr class="" data-end="365" data-start="362"/>
@@ -653,7 +655,9 @@ for i in range(1, 67):  # 1 到 66
 <p><strong></strong></p>
 <p><strong>Exam3-2</strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/nufCifoTWTU?si=M4hwbr8kT2ZLWqWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
-<h1>Final</h1>
+<p><strong></strong></p>
+<p><strong>Exam3-3</strong></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/m7HNrprcxq8?si=ky4N4dpSgAe7nyAG" title="YouTube video player" width="560"></iframe></p><h1>Final</h1>
 <p><span>期末協同專案執行過程影片、簡報與 PDf 報告檔案 (六人一組) (30%)</span></p>
 <p><span>題目: <span style="background-color: #ccffcc;">Webots 動態投籃模擬系統的協同設計</span></span></p>
 <p><span>說明: </span></p>
