--- a/content/Exam2.html
+++ b/content/Exam2.html
@@ -148,10 +148,12 @@ img.add_border {
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/9vmKljh-6fc?si=cWV05HKhQ3aGF-Qf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <p></p>
-<p><strong>操作影片</strong></p>
+<p><span style="color: #0000ff;"><strong>操作影片</strong></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/_b5IuWsax4w?si=UuM7XdJUg0BaSKz_" title="YouTube video player" width="560"></iframe></p>
-<p><strong></strong></p>
-<p><strong>步驟:</strong></p>
+<p></p>
+<p><span style="color: #0000ff;"><strong>檔案連結: <a href="./../downloads/Exam2.zip">Exam2.zip</a></strong></span></p>
+<p></p>
+<p><span style="color: #0000ff;"><strong>步驟:</strong></span></p>
 <p class="" data-end="152" data-start="51">在 <strong data-end="67" data-start="53">Solvespace</strong> 中完成零件與機構設計後，將模型匯出為 STL 格式。接著，使用程式碼工具將 STL 檔轉換為 OBJ 格式，再匯入 <strong data-end="137" data-start="126">Blender</strong>，以檢查所有零件名稱是否正確。</p>
 <p class="" data-end="360" data-start="154">確認模型無誤後，開始在 <strong data-end="176" data-start="166">Webots</strong> 中建立機器人結構。首先，新增一個 <code data-end="201" data-start="194">Robot</code> 節點，並設定所需的 <code data-end="224" data-start="212">controller</code>（名稱為 <code data-end="249" data-start="229">fourbar_controller</code>）。接下來，在 <code data-end="267" data-start="257">children</code> 中加入兩個旋轉關節（<code data-end="290" data-start="278">HingeJoint</code>），分別命名為 <code data-end="306" data-start="298">joint1</code> 與 <code data-end="317" data-start="309">joint4</code>，以及兩個底座物件 <code data-end="334" data-start="327">Solid</code>（分別命名為 <code data-end="348" data-start="341">base1</code> 與 <code data-end="358" data-start="351">base2</code>）。</p>
 <hr class="" data-end="365" data-start="362"/>
